# hwisak-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
res/db/: cpu.db
scripts/: build.bat  build.sh
scripts/lib/libcpuid/drivers/: .gitignore
src/: lib.rs  main.rs
src/cpu/: amd.rs  intel.rs  mod.rs
src/gpu/: mod.rs
src/os/: mod.rs
