[package]
name = "hwisak-rs"
version = "0.1.0"
edition = "2021"
authors = ["Thribhu K"]
repository = "https://github.com/tk-rs/hwisak-rs"

[dependencies]
os_info = "3.9.0"
sysinfo = "0.32.1"
raw-cpuid = "11.2.0"
regex = "1.11.1"
csv = "1.3.1"
rusqlite = { version = "0.32.0", features = ["bundled"] }