[package]
name = "hwisak-rs"
version = "0.1.0"
edition = "2021"
authors = ["Thribhu K"]
repository = "https://github.com/tk-rs/hwisak-rs"

[dependencies]
libloading = "0.8.6"

csv = "1.3.1"
rusqlite = { version = "0.32.0", features = ["bundled"] }

os_info = "3.9.0"
sysinfo = "0.33.0"
raw-cpuid = "11.2.0"
machine-info = "1.0.9"

raw-gl-context = "0.1"
gl = "0.14"
ash = { version = "0.38.0+1.3.281", features = ["linked"] }

winreg = "0.52.0"

log = "0.4.22"
env_logger = "0.11.5"

pollster = "0.4.0"
wgpu = "23.0.1"
wgpu-hal = "23.0.1"