[package]
name = "hwisak-rs"
version = "0.1.0"
edition = "2021"
authors = ["Thribhu K"]
repository = "https://github.com/tk-rs/hwisak-rs"

[dependencies]

csv = "1.3.1"
rusqlite = { version = "0.32.0", features = ["bundled"] }

os_info = "3.9.0"
sysinfo = "0.33.0"

log = "0.4.22"
env_logger = "0.11.5"

wgpu = "23.0.1"
